# godeps

./: .gitmodules  Makefile  README.md  notes.txt  pyproject.toml  requirements-dev.txt  requirements.txt
src/: godeps.py
