[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "godeps"
version = "0.0.1"
dependencies = ["pydantic"]
requires-python = ">=3.11"

[project.scripts]
godeps = "godeps:main"

[project.optional-dependencies]
dev = ["black", "isort[colors]", "mypy"]


[tool.black]
line-length = 100


[tool.isort]
profile = "black"
line_length = 100


[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
