[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "godeps"
version = "0.0.1"
dependencies = ["pydantic"]
requires-python = ">=3.11"

[project.scripts]
godeps = "godeps:main"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]


[tool.black]
line-length = 100


[tool.ruff]
line-length = 100
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builting
    "SIM",  # flake8-simplify
]
show-source = true


[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
